# HEYOU

./: .gitattributes  .gitignore  LICENSE  README.md  README_EN.md  config.example.yaml  pyproject.toml  run_windows.bat
docs/: WINDOWS.md
heyou/: camera.py  config.py  db.py  logging_setup.py  orchestrator.py  printing.py  recognition.py  styles.py
heyou/generation/: base.py  mock.py  runninghub.py  service.py
heyou/server/: app.py
heyou/server/static/: index.html
pixcut-probe/: Info.plist  axclick.sh  axdump.sh  axenable.c  bt_send.cpp  click.c  pixcut_win.py  prep_print.py  print_via_app.py  print_via_app.sh  probe.cpp  status_query.py  trigger_sck.swift  trigger_sr.c  usb_combo.cpp  usb_mp.cpp  usb_print.cpp  usb_probe.cpp  usb_send.cpp
pixcut-probe/samples/: sample_4x7_cut.plt
scripts/: analyze_ue.py  diag_camera.py  health_check.py  inspect_workflow.py  repair_workflow.py  reset_prints.py  run_recognition.py  run_server.py  smoke_autoenroll.py  smoke_server.py  smoke_test.py  test_print.py  test_runninghub.py  trace_nodes.py
workflows/: cute_you_2.json  cute_you_2_leg_pro.json
