[project]
name = "heyou"
version = "0.1.0"
description = "Bar-door face recognition -> AI 2D cartoon (RunningHub) -> print"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy>=1.24,<2",
    "opencv-python>=4.9",
    "onnxruntime>=1.17",
    "insightface>=0.7.3",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "pillow>=10.0",
    "httpx>=0.27",
    "pydantic>=2.6",
    # Windows-only: system-printer backend (win32print + GDI). Not installed on mac/Linux.
    "pywin32>=306 ; sys_platform == 'win32'",
    # Windows-only: Liene-app UI automation (PixCut backend port of the macOS script).
    "pyautogui>=0.9.54 ; sys_platform == 'win32'",
    "pygetwindow>=0.0.9 ; sys_platform == 'win32'",
    "pyperclip>=1.8 ; sys_platform == 'win32'",
    "psutil>=5.9 ; sys_platform == 'win32'",
]

[tool.uv]
# This is an application, not a library — don't try to build/install it as a package.
package = false
